--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,18 +2,16 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
+      value: Karuna Hengaju
     - name: Languages
-      value: English, German
+      value: English, Nepali, Hindi, Newari
 
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: MBA
+      institution: Boise State University
+      year: May 2025
       description:
         - Description 1.
         - Description 2.
@@ -21,9 +19,16 @@
           contents:
             - Sub-description 1.
             - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+    - title: MA, Public Administration
+      institution: Tribhuvan University
+      year: March,2021
+      description:
+        - Description 1.
+        - Description 2.
+    
+     - title: BSc, Microbiology
+      institution: Tribhuvan University
+      year: March,2021
       description:
         - Description 1.
         - Description 2.
@@ -31,8 +36,8 @@
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
+    - title: Office Assistant
+      institution: Nepal Airlines
       year: 1933 - 1955
       description:
         - Description 1.
