--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -18,13 +18,13 @@
         - 3.92 GPA
     - title: MA, Public Administration
       institution: Tribhuvan University
-      year: March,2021
+      year: March 2021
       description:
         - Thesis:"Study on Motivation in International and Domestic Sales Units of Nepal Airlines Corporation"
         - 3.52 GPA
     - title: BSc, Microbiology
       institution: Tribhuvan University
-      year: March,2021
+      year: March 2021
       description:
         - First Division
 
@@ -33,7 +33,8 @@
   contents:
     - title: Office Assistant
       institution: Nepal Airlines Corporation, Nepal
-      year: Dexember 2018 - June 2022
+      year: 2018 - 2022
+      month: December - June
       description:
         - title: General Service and Property Management Department
           contents:
@@ -48,7 +49,8 @@
 
     - title: Deputy Manager (Part-time)
       institution: Kamal Binayak Cooperatives Ltd, Bhaktapur
-      year: May 2021 - August 2021
+      year: 2021 - 2021
+      month: May - August
       description:
         - Led social event planning to boost community engagement
         - Conducted regular organizational reviews for continuous improvements
