--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -60,11 +60,11 @@
   contents:
     - title: Marketing and Promotion Officer
       institution: Nepalese Student Association at BSU
-      year: August 2023-now
+      year: 2023-now
       description: Increased Nepalese Students Association event attendance at Boise State University through targeted social media marketing and event planning and decoration coordinator.
     - title: Volunteer
       institution: Women's and Children's Association
-      year: August 2021-now
+      year: 2021-now
       description: Participated in outreach programs for domestic and sexual violence awareness, LGBTQ+ inclusion, and community education and empowerment initiatives.
 
 
