--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -31,7 +31,7 @@
 - title: Experience
   type: time_table
   contents:
-    - title: Office Assistant
+    - title: Administrative Assistant
       institution: Nepal Airlines Corporation, Nepal
       year: 2018 - 2022
       month: December - June
